# grim

./: .gitignore  CNAME  IFunction.cpp  LICENSE  README.md  RHSFunction.cpp  _config.yml  about.md  acknowledgements.md  algorithms.md  authors.md  boundary.c  boundary.h  compile.md  computeresidual.c  computeresidual.cl  constants.h  coordinates.c  download.md  gallery.md  geometry.c  geometry.h  gridzone.c  gridzone.h  grim.c  grim.cpp  grim.h  index.html  index.md  initialconditions.c  inputs.h  make.sh  make_summit.sh  makefile  models.md  params.json  phys.cl  publications.md  reconstruct.c  reconstruct.cl  (+4 more)
_includes/: head.html  sidebar.html
_layouts/: default.html
boundary/: boundary.c  boundary.h
geometry/: geometry.c  geometry.h
gridzone/: CMakeLists.txt  gridzone.c  gridzone.h
physics/: physics.c  physics.h
public/css/: hyde.css
reconstruct/: CMakeLists.txt  reconstruct.c
src/: CMakeLists.txt  config.h.in  grim.c  grim.cpp  grim.h  grim.hpp  inputs.h  params.cpp  params.hpp  timer.hpp
src/boundary/: CMakeLists.txt  boundary.c  boundary.cpp  boundary.h  boundary.hpp  boundaryHeaders.pxd  boundaryPy.pyx  conftest.py  macros.h  test_boundary.py
src/cmake/modules/: FindCuba.cmake  FindCubature.cmake  FindGSL.cmake  FindLibXML2.cmake  FindOpenCL.cmake  README
src/geometry/: CMakeLists.txt  CoordinateChangeFunctions.hpp  CoordinateChangeFunctionsArray.hpp  conftest.py  geometry.c  geometry.cpp  geometry.h  geometry.hpp  geometryHeaders.pxd  geometryPy.pxd  geometryPy.pyx  macros.h  test_geometry.py
src/grid/: CMakeLists.txt  conftest.py  grid.c  grid.cpp  grid.h  grid.hpp  gridHeaders.pxd  gridPy.pxd  gridPy.pyx  gridPythonHeaders.pxd  gridpy.pyx  macros.h  test_mpi.py
src/gridzone/: CMakeLists.txt  gridzone.c  gridzone.h
src/nonlinearsolver/: CMakeLists.txt  nonlinearsolver.cpp  nonlinearsolver.hpp  solve.cpp
src/physics/: CMakeLists.txt  conduction.c  conftest.py  macros.h  physics.c  physics.cpp  physics.h  physics.hpp  physicsHeaders.pxd  physicsPy.pxd  physicsPy.pyx  reconstruction.cpp  riemannsolver.c  riemannsolver.cpp  test_physics.py  tetrads.cpp  viscosity.c
src/physics/radiation/: emission.cpp  manager.cpp  photons.cpp  radiation.hpp
src/problem/: CMakeLists.txt  problem.h  problem.hpp
src/problem/advection_test/: CMakeLists.txt  config.h.in  problem.c
src/problem/anisotropic_conduction/: CMakeLists.txt  config.h.in  problem.c
src/problem/atmosphere/: CMakeLists.txt  config.h.in  problem.c
src/problem/bondi_inflow/: CMakeLists.txt  problem.c  problem.cpp  problemdata.h
src/problem/bondi_viscous/: CMakeLists.txt  bondi_viscous.h  config.h.in  problem.c  problemdata.h  runtimeoptions
src/problem/buoyancy_instabilities/: CMakeLists.txt  config.h.in  params.cpp  problem.c  problem.cpp
src/problem/linear_modes/: Balbusaur.sagews  CMakeLists.txt  Linear modes.ipynb  config.h.in  params.cpp  problem.c  problem.cpp
src/problem/magnetized_explosion/: CMakeLists.txt  config.h.in  problem.c
src/problem/magnetized_field_loop_advection/: CMakeLists.txt  config.h.in  problem.c  problemdata.h
src/problem/magnetized_field_loop_advection_2d/: CMakeLists.txt  config.h.in  problem.c
src/problem/orzag_tang/: CMakeLists.txt  config.h.in  params.cpp  problem.c  problem.cpp
src/problem/orzag_tang_2d/: CMakeLists.txt  config.h.in  problem.c
src/problem/performance_test/: CMakeLists.txt  config.h.in  problem.c  torus.h
src/problem/performance_testing/: params.cpp  problem.cpp
src/problem/shock_tests/: CMakeLists.txt  EMHD_shock.ipynb  config.h.in  params.cpp  problem.c  problem.cpp  shock_tests.ipynb
src/problem/torus/: CMakeLists.txt  ObserversTorus.hpp  config.h.in  movie.py  params.cpp  problem.c  problem.cpp  torus.h  torus.hpp
src/problem/torus_2d/: CMakeLists.txt  config.h.in  problem.c  torus_2d.h
src/problem/transport_test_2d/: CMakeLists.txt  config.h.in
src/radiation/: CMakeLists.txt  manager.cpp  radiation.hpp
src/reconstruct/: CMakeLists.txt  macros.h  reconstruct.c  reconstruct.h
src/reconstruction/: CMakeLists.txt  minmod.cpp  ppm.cpp  reconstruction.cpp  reconstruction.hpp  reconstructionHeaders.pxd  reconstructionPy.pyx  reconstructionPythonHeaders.pxd  weno5.cpp
src/riemannsolver/: CMakeLists.txt  riemannsolver.c  riemannsolver.h
src/timestepper/: CMakeLists.txt  conftest.py  constrainedtransport.cpp  constrainttransport.c  diagnostics.c  fvmfluxes.c  fvmfluxes.cpp  invertor.cpp  macros.h  residual.c  residual.cpp  residualimex.c  solve.cpp  test_CT.py  timeStepperPy.pxd  timeStepperPy.pyx  timestep.c  timestep.cpp  timestepper.c  timestepper.cpp  timestepper.h  timestepper.hpp  timestepperHeaders.pxd
timestepper/: CMakeLists.txt  conservedtoprimitive.c  residualimex.c
